exports[`(.not).toHaveSeeOtherStatus > using axios > .not.toHaveSeeOtherStatus > fails when response have status code 303 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveSeeOtherStatus()</intensity>

Expected status code to not be 303 received:
  <red>303</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 303,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveSeeOtherStatus > using axios > .toHaveSeeOtherStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveSeeOtherStatus()</intensity>

Expected status code to be 303 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
